# CreditRisk

./: .gitignore  LICENSE
apps/backend/: .pre-commit-config.yaml  README.md  pyproject.toml  run.py
apps/backend/app/: main.py
apps/backend/app/core/: logging_config.py  settings.py
apps/backend/app/models/: payback_models.py
apps/backend/app/routes/: payback.py
apps/backend/app/services/: analysis_service.py  credit_score_service.py  payback_service.py
ml/: README.md
